# ap_solvers

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py  setup.py
ap_solvers/: __init__.py  bunch_kaufman.py  convex_hull.py  dense_mp_matrix.py  nelder_mead.py  qp.py  sqp.py
docs/: qp.tex
src/: bunch_kaufman.py  dense_mp_matrix.py  qp.py
tests/: test_bunch_kaufman.py  test_convex_hull.py  test_dense_mp_matrix.py  test_nelder_mead.py  test_qp.py  test_sqp.py
